--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -40,7 +40,8 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   google: #F53D3D,
-  facebook: #4267B2
+  facebook: #4267B2,
+  default: #bfbfbf
 );
 
 
